2012-07-24 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_networkmap.php,
	operation/agentes/networkmap.groups.php,
	operation/agentes/networkmap_list.php: Fixed several problems with
	network maps


2012-07-20  Hirofumi Kosaka  <kosaka@rworks.jp>

        * index.php: bug fix: 'Enforce https' led to wrong URL to
	cause "error 310: too many redirects".
	* include/functions_ui.php: bug fix: ui_get_full_url() had
	returned URL with unnecessary wrong port specifier ":80",
	when switching 'http' to 'https' by 'enforce https'.

	Merged from trunk

2012-07-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/group_view.php: Backport of aesthetic bugfix
	of group view indentation.

2012-07-17 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_modules.php
	include/functions_agents.php
	include/functions_os.php
	include/functions_groups.php
	operation/tree.php: Backport tree view fixes from trunk.

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora_modules.js
	godmode/modules/manage_network_components_form_common.php: Cleaned
	unecessary code of network components (units) merged from trunk

2012-07-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/javascript/pandora_modules.js
	include/javascript/pandora.js
	godmode/agentes/module_manager_editor_common.php
	godmode/modules/manage_network_components_form_common.php: 
	Fixed several bugs of the network/local components javascript
	code and added new fields to local components
	Workaround to do it from code loaded through 
	ajax

	Merged from trunk

2012-07-04  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php
	operation/agentes/estado_monitores.php
	operation/snmpconsole/snmp_view.php
	general/header.php: Fixes of missed "sec" changes in the new
	menus and a little hack of the classify of retrieved menus

	MERGED FROM TRUNK

2012-06-28 Miguel de Dios <miguel.dedios@artica.es>
	