@@ -1,3 +1,12 @@
+2012-07-24 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/module_manager.php: fixed the messages for to
+	delete multiple modules.
+	
+	Fixes: #3543532
+	
+	MERGED FROM TRUNK
+
 2012-07-24 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* include/functions_networkmap.php,
